# ldt

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
scripts/: linkify_changelog.py
src/: lib.rs
src/direct/: constraints.rs  mod.rs
src/domain/: mod.rs
src/fri/: mod.rs  prover.rs  verifier.rs
src/fri/constraints/: mod.rs
