[package]
name = "ark-ldt"
version = "0.1.0"
authors = ["arkworks contributors"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-crypto-primitives = { version="^0.4.0", features = ["sponge"] }
ark-ff = { version = "^0.4.2", default-features = false }
ark-std = { version = "^0.4.0", default-features = false }
ark-r1cs-std = { version = "^0.4.0", default-features = false}
ark-poly = { version = "0.4.2" }
ark-relations = { version = "^0.4.0", default-features = false, optional = true}
tracing = { version = "0.1", default-features = false, features = [ "attributes" ], optional = true}

[dev-dependencies]
ark-test-curves = { version = "^0.4.2", default-features = false, features = ["bls12_381_scalar_field", "mnt4_753_scalar_field"] }

[patch.crates-io]
ark-r1cs-std = { git = "https://github.com/arkworks-rs/r1cs-std" }
ark-ec = { git = "https://github.com/arkworks-rs/algebra" }
ark-ff = { git = "https://github.com/arkworks-rs/algebra/" }
ark-poly = { git = "https://github.com/arkworks-rs/algebra" }
ark-serialize = { git = "https://github.com/arkworks-rs/algebra" }
ark-std = { git = "https://github.com/arkworks-rs/std" }
ark-test-curves = { git = "https://github.com/arkworks-rs/algebra" }

[profile.release]
opt-level = 3
lto = "thin"
incremental = true
panic = 'abort'

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = "thin"
incremental = true
debug-assertions = false

[profile.dev]
opt-level = 0
panic = 'abort'

[profile.test]
opt-level = 3
lto = "thin"
incremental = true
debug-assertions = true
debug = true

[features]
default = ["std"]
std = ["ark-ff/std", "ark-std/std", "ark-relations/std", "ark-r1cs-std/std", "ark-crypto-primitives/std", "ark-poly/std"]
r1cs = ["ark-crypto-primitives/r1cs", "tracing", "ark-relations"]

